# hs-bindgen-traits

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: fun.rs  hs.rs  lib.rs  str.rs  vec.rs
