[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Utility traits behind hs-bindgen ergonomics"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hs-bindgen-traits"
repository = "https://github.com/yvan-sraka/hs-bindgen-traits"
rust-version = "1.64.0"
version = "0.6.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
displaydoc = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0"
